--- a/Player-Bios/Michael.html
+++ b/Player-Bios/Michael.html
@@ -16,6 +16,103 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Tournaments</title>
   </head>
+  <style>
+    .bio-header {
+      font-size: 9rem;
+    }
+
+    .crests:last-child {
+      margin-right: 0;
+    }
+
+    .centered-container {
+      /*this is for songs*/
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 0px;
+    }
+    .GOTW__video {
+      margin: auto;
+    }
+    .songcenter {
+      margin-bottom: -40px;
+    }
+    .scale__button {
+      scale: 0.8;
+    }
+    .feature:first-of-type {
+      margin-top: 2rem;
+    }
+    .seemore {
+      color: white;
+      font-size: 2.5rem;
+      text-shadow: 2px 2px 4px #444444;
+      text-align: center;
+    }
+
+    .block__header {
+      margin-bottom: 1rem;
+    }
+    .fav__table {
+      font-size: 24px;
+      text-align: center;
+      color: white;
+      text-shadow: 2px 2px 4px #444444;
+      border-radius: 8px;
+      width: 100%;
+    }
+
+    .fav__table tr:nth-child(2) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .table__insert {
+      border: 3px solid rgb(30, 32, 29);
+      flex: 1 1 33%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2px;
+      background-color: rgb(3, 132, 29);
+    }
+
+    .crests {
+      margin-left: 4px;
+      width: 75px;
+      max-height: 75px;
+      object-fit: contain;
+      justify-content: start;
+    }
+    .crests__nomargin {
+      margin: 0;
+      width: 50px;
+      max-height: 50px;
+      object-fit: scale-down;
+    }
+
+    .position {
+      margin-bottom: 0;
+      margin-right: 5px;
+    }
+
+    th {
+      font-size: 3.5rem;
+    }
+    .movedown {
+      margin-bottom: 0.5rem;
+    }
+
+    .crestsmall {
+      height: 50px;
+      padding: 5px 0;
+    }
+    .crestlarge {
+      height: 70px;
+    }
+  </style>
   <body>
     <nav class="nav collapsible">
       <a href="../index.html"
@@ -29,10 +126,10 @@
           <a href="../index.html">Home</a>
         </li>
         <li class="nav__item">
-          <a href="../Player-Bios/player-bios-index.html">Player Biographies</a>
+          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
         </li>
         <li class="nav__item">
-          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
+          <a href="../Season-1-Driver/S1-index.html">Season 1 Stats & Info</a>
         </li>
         <li class="nav__item">
           <a href="../Tournaments/tournaments-index.html">Tournaments</a>
@@ -43,5 +140,280 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Michael</h2>
+        <p class="seasons-text">
+          Michael is the most improved player from the previous season of the
+          FIFA League. With a relentless drive to succeed, he dedicated his
+          entire summer to intense training, determined to make his mark on the
+          upcoming season. Now, as the new season approaches, Michael is
+          prepared to showcase his exceptional abilities and dominate the
+          league. With his newfound confidence and unwavering focus, he is
+          poised to become a force to be reckoned with, ready to take the league
+          by storm and leave an indelible mark on the world of football.
+        </p>
+      </header>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Awards</h2>
+        <p class="seasons-text">
+          Michael is the Current Holder of the Best Young Player Award for
+          Season 1
+        </p>
+        <p class="seasons-text seasons-text-end">
+          Michael has been nominated for 3 Goal of the Week awards, but has won
+          none.
+        </p>
+      </header>
+    </section>
+    <section>
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Top 3 FIFA Songs:</h2>
+      </header>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/6D3g26uM2CmNVUhPWWNsBS?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/3BWbj5NXUgr0hK7PmFSI9D?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/2wKNBWS1mK1BhepVnuylz2?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Tournament Performances:</h2>
+      </header>
+      <article class="grid grid--1x2 feature movedown">
+        <div class="feature__content">
+          <h3 class="feature__heading">1<sup>st</sup> annual World Cup</h3>
+          <div>
+            <p>
+              Michael came into the tournament on a 2 game win streak. He was
+              also on a 2 game win streak over his first round match-up, Joe.
+            </p>
+            <p>
+              He ended up losing what would be a near record braking offensive
+              performance, including 16 shots and 8 on goal. Unfortunately,
+              these efforts led to no goals and a defeat to Joe.
+            </p>
+            <p>
+              Despite his best effort in his second game, he fell to Karsin
+              after only producing a single shot on goal.
+            </p>
+          </div>
+          <button class="button2 scale__button">
+            <a
+              class="links"
+              href="../Tournaments/Tournaments-folder/WC-R11.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/mikeWC.webp"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Favorites</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Teams:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Italy
+            <img
+              class="crests"
+              src="../Season-1-Team-Logos/italycrest.png"
+              alt="italy Crest"
+            />
+          </td>
+          <td class="table__insert">
+            Brazil<img
+              class="crests"
+              src="../Season-1-Team-Logos/Brazilcrest"
+              alt="brazil crest"
+            />
+          </td>
+          <td class="table__insert">
+            Germany<img
+              class="crests"
+              src="../Season-1-Team-Logos/germanycrest.png"
+              alt="Mexico crest"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Players:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Lukaku
+            <img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/Lukaku.png"
+              alt="Lukaku"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/belgiumcrest.png"
+              alt="Belgium Crest"
+            />
+            <p class="position">ST</p>
+          </td>
+          <td class="table__insert">
+            Buffon<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/buffon.png"
+              alt="Buffon"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/italycrest.png"
+              alt="italy Crest"
+            />
+            <p class="position">GK</p>
+          </td>
+          <td class="table__insert">
+            Diego Costa<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/DC.png"
+              alt="DC"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/spaincrest.png"
+              alt="Spain Crest"
+            />
+            <p class="position">ST</p>
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Clubs (Prem, La Liga, Other):</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Inter Milan
+            <img class="crests" src="../Team-Logos/inter.png" alt="Inter" />
+          </td>
+          <td class="table__insert">
+            Athletico Madrid<img
+              class="crests"
+              src="../Team-Logos/AM.webp"
+              alt="Athletico Madrid crest"
+            />
+          </td>
+          <td class="table__insert">
+            West Bromwich Albion<img
+              class="crests"
+              src="../Team-Logos/WBA.webp"
+              alt="WBA logo"
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Other Facts:</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Nationality:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Italian
+            <img
+              class="crestsmall crests"
+              src="../Player-Bios/Player-Bio-Photos/italy.png"
+              alt="Italy"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Rivals:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Joe
+            <img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/Joe-Headshot.png"
+              alt="MCFC"
+            />
+          </td>
+          <td class="table__insert">
+            Alejandro<img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/Alej-Headshot.png"
+              alt="Real Madrid crest"
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Season Stats:</h2>
+      </header>
+      <p class="seemore">
+        To View Player's Stats, See the Season 1 or Season 2 Stats & Info
+        Section:
+      </p>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-2-Driver/S2-index.html">Season 2 →</a>
+      </button>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-1-Driver/S1-index.html">Season 1 →</a>
+      </button>
+    </section>
   </body>
 </html>
