--- a/Season-2-Driver/S2-index.html
+++ b/Season-2-Driver/S2-index.html
@@ -19,6 +19,7 @@
   <style>
     .Name {
       color: white;
+      font-size: 8rem;
     }
     .grid--1x2 {
       grid-template-columns: repeat(2, 45vw);
@@ -29,6 +30,9 @@
       object-fit: cover;
       height: 250px;
       object-position: top;
+    }
+    .seasons-header {
+      font-size: 9rem;
     }
   </style>
   <body>
@@ -120,6 +124,19 @@
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <h3 class="feature__heading">
+            <a class="Name" href="S2-Form.html">Current Form</a>
+          </h3>
+          <p>View the stats of the players for their 10 most recent games</p>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-Form.html"
+            ><img class="feature__image" src="../S2-images/neymar.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
             <a class="Name" href="S2-IndStatsAGST.html"
               >Individual Stats Against</a
             >
@@ -138,7 +155,7 @@
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <h3 class="feature__heading">
-            <a class="Name" href="Karsin.html">Rankings</a>
+            <a class="Name" href="Karsin.html">Stat Rankings</a>
           </h3>
           <p>
             Player's stats ranked against each other. Both offensive and
@@ -154,6 +171,37 @@
       <article class="grid grid--1x2 feature">
         <div class="feature__content">
           <h3 class="feature__heading">
+            <a class="Name" href="S2-Rankingsgame.html">Game Rankings</a>
+          </h3>
+          <p>Each game's associated ratings, ranked by best in each category</p>
+        </div>
+        <picture class="feature__image">
+          <a href="S2-Rankingsgame.html"
+            ><img class="feature__image" src="../S2-images/ramos.webp" alt=""
+          /></a>
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
+            <a class="Name" href="S2-MatchLog.html">Match Log</a>
+          </h3>
+          <p>
+            View the log of every game played for the Season 2 of the 402 FIFA
+            League.
+          </p>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="../S2-images/germany.webp"
+            alt="idk"
+          />
+        </picture>
+      </article>
+      <article class="grid grid--1x2 feature">
+        <div class="feature__content">
+          <h3 class="feature__heading">
             <a class="Name" href="S2-FIFA16TS.html"
               >FIFA 16 International Team Ratings</a
             >
@@ -162,38 +210,8 @@
         </div>
         <picture class="feature__image">
           <a href="S2-FIFA16TS.html"
-            ><img class="feature__image" src="../S2-images/ramos.webp" alt=""
+            ><img class="feature__image" src="../S2-images/chec.jpg" alt=""
           /></a>
-        </picture>
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <h3 class="feature__heading">
-            <a class="Name" href="JT.html">J.T.</a>
-          </h3>
-        </div>
-        <picture>
-          <img class="feature__image" src="" alt="jt Image" />
-        </picture>
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <h3 class="feature__heading">
-            <a class="Name" href="Jake.html">Jake</a>
-          </h3>
-        </div>
-        <picture>
-          <img class="feature__image" src="" alt="Jake Photo" />
-        </picture>
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <h3 class="feature__heading">
-            <a class="Name" href="Grand-Flank.html">Grand Flank</a>
-          </h3>
-        </div>
-        <picture>
-          <img class="feature__image" src="" alt="grand flank Image" />
         </picture>
       </article>
     </section>
