--- a/Player-Bios/Karsin.html
+++ b/Player-Bios/Karsin.html
@@ -16,6 +16,103 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Tournaments</title>
   </head>
+  <style>
+    .bio-header {
+      font-size: 9rem;
+    }
+
+    .crests:last-child {
+      margin-right: 0;
+    }
+
+    .centered-container {
+      /*this is for songs*/
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 0px;
+    }
+    .GOTW__video {
+      margin: auto;
+    }
+    .songcenter {
+      margin-bottom: -40px;
+    }
+    .scale__button {
+      scale: 0.8;
+    }
+    .feature:first-of-type {
+      margin-top: 2rem;
+    }
+    .seemore {
+      color: white;
+      font-size: 2.5rem;
+      text-shadow: 2px 2px 4px #444444;
+      text-align: center;
+    }
+
+    .block__header {
+      margin-bottom: 1rem;
+    }
+    .fav__table {
+      font-size: 24px;
+      text-align: center;
+      color: white;
+      text-shadow: 2px 2px 4px #444444;
+      border-radius: 8px;
+      width: 100%;
+    }
+
+    .fav__table tr:nth-child(2) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .table__insert {
+      border: 3px solid rgb(30, 32, 29);
+      flex: 1 1 33%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2px;
+      background-color: rgb(3, 132, 29);
+    }
+
+    .crests {
+      margin-left: 4px;
+      width: 75px;
+      max-height: 75px;
+      object-fit: contain;
+      justify-content: start;
+    }
+    .crests__nomargin {
+      margin: 0;
+      width: 50px;
+      max-height: 50px;
+      object-fit: scale-down;
+    }
+
+    .position {
+      margin-bottom: 0;
+      margin-right: 5px;
+    }
+
+    th {
+      font-size: 3.5rem;
+    }
+    .movedown {
+      margin-bottom: 0.5rem;
+    }
+
+    .crestsmall {
+      height: 50px;
+      padding: 5px 0;
+    }
+    .crestlarge {
+      height: 70px;
+    }
+  </style>
   <body>
     <nav class="nav collapsible">
       <a href="../index.html"
@@ -29,10 +126,10 @@
           <a href="../index.html">Home</a>
         </li>
         <li class="nav__item">
-          <a href="../Player-Bios/player-bios-index.html">Player Biographies</a>
+          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
         </li>
         <li class="nav__item">
-          <a href="../Season-2-Driver/S2-index.html">Season 2 Stats & Info</a>
+          <a href="../Season-1-Driver/S1-index.html">Season 1 Stats & Info</a>
         </li>
         <li class="nav__item">
           <a href="../Tournaments/tournaments-index.html">Tournaments</a>
@@ -43,5 +140,259 @@
       </ul>
     </nav>
     <script src="../js/main.js"></script>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Karsin</h2>
+        <p class="seasons-text">
+          Karsin is a highly skilled and aggressive player who transferred from
+          Wash U St. Louis League. He is known for being one of the league's top
+          individual performers, boasting multiple double-digit win streaks
+          against fellow players. His aggressive playing style sets him apart
+          and makes him a formidable opponent on the pitch.
+        </p>
+      </header>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Awards</h2>
+        <p class="seasons-text">
+          Karsin is the Current Holder of the Fair Play Award for Season 1
+        </p>
+        <p class="seasons-text seasons-text-end">
+          Karsin has been nominated for 3 Goal of the Week awards, but has won
+          none.
+        </p>
+      </header>
+    </section>
+    <section>
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Top 3 FIFA Songs:</h2>
+      </header>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/0LfuWiORVwG95R86ENdCAX?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/5U0AcKclgf0AbG11AUFLht?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+      <div class="centered-container">
+        <iframe
+          class="songcenter"
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/track/0JSux25Te5HYMSr2D64d02?utm_source=generator"
+          width="90%"
+          height="200"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
+      </div>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Tournament Performances:</h2>
+      </header>
+      <article class="grid grid--1x2 feature movedown">
+        <div class="feature__content">
+          <h3 class="feature__heading">1<sup>st</sup> annual World Cup</h3>
+          <div>
+            <p>
+              Karsin came into the tournament on a 10 game win streak. That
+              includes 2 games against Alejandro.
+            </p>
+            <p>
+              He ended up losing what would be the only match of the tournament
+              that went to penalties against Alejandro. He then made quick work
+              of Joe and Michael, winning by a combined score of 3 - 0.
+            </p>
+            <p>
+              In what seemed to be an incredible upset, with less than 10
+              minutes to go, Karsin conceded 2 goals to Gabe's England side to
+              end up losing 2 - 1 in the losers finals.
+            </p>
+          </div>
+          <button class="button2 scale__button">
+            <a
+              class="links"
+              href="../Tournaments/Tournaments-folder/WC-R11.html"
+              >Learn More →</a
+            >
+          </button>
+        </div>
+        <picture>
+          <img
+            class="feature__image"
+            src="Player-Bio-Photos/karsinwc.JPEG"
+            alt="Ale-winning-worlc cup"
+          />
+        </picture>
+      </article>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Favorites</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Teams:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            India
+            <img
+              class="crests"
+              src="../Season-1-Team-Logos/indiacrest.png"
+              alt="India Crest"
+            />
+          </td>
+          <td class="table__insert">
+            United States of America<img
+              class="crests"
+              src="../Season-1-Team-Logos/UScrest.png"
+              alt="us crest"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Players:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Robben
+            <img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/robben.png"
+              alt="robben"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/Netherlandscrest.png"
+              alt="netherlands Crest"
+            />
+            <p class="position">RW</p>
+          </td>
+          <td class="table__insert">
+            Chhetri<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/chechiriti.webp"
+              alt="Chhetri"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/indiacrest.png"
+              alt="italy Crest"
+            />
+            <p class="position">ST</p>
+          </td>
+          <td class="table__insert">
+            Yedlin<img
+              class="crests__nomargin"
+              src="../FIFA Player Headshots/yeldin.png"
+              alt="YEDLIN"
+            />
+            <img
+              class="crests__nomargin"
+              src="../Season-1-Team-Logos/UScrest.png"
+              alt="us Crest"
+            />
+            <p class="position">RB</p>
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="3">Favorite Clubs (Prem, La Liga, Other):</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Manchester United
+            <img class="crests" src="../Team-Logos/manu.svg.png" alt="Man U" />
+          </td>
+          <td class="table__insert">
+            Borussia Mönchengladbach<img
+              class="crests"
+              src="../Team-Logos/borissia.png"
+              alt="Borussia Mönchengladbach crest"
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Other Facts:</h2>
+      </header>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Nationality:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            Indian
+            <img
+              class="crestsmall crests"
+              src="../Player-Bios/Player-Bio-Photos/Flag-India.webp"
+              alt="Italy"
+            />
+          </td>
+        </tr>
+      </table>
+      <table class="fav__table">
+        <tr>
+          <th colspan="2">Rivals:</th>
+        </tr>
+        <tr>
+          <td class="table__insert">
+            ZouZou
+            <img class="crests" src="" alt="ZouZou" />
+          </td>
+          <td class="table__insert">
+            Alejandro<img
+              class="crests"
+              src="../Player-Bios/Player-Bio-Photos/Player Headshots/Alej-Headshot.png"
+              alt="Real Madrid crest"
+            />
+          </td>
+        </tr>
+      </table>
+    </section>
+
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="seasons-header bio-header">Season Stats:</h2>
+      </header>
+      <p class="seemore">
+        To View Player's Stats, See the Season 1 or Season 2 Stats & Info
+        Section:
+      </p>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-2-Driver/S2-index.html">Season 2 →</a>
+      </button>
+      <button class="button2 scale__button">
+        <a class="links" href="../Season-1-Driver/S1-index.html">Season 1 →</a>
+      </button>
+    </section>
   </body>
 </html>
